AddIns/Neo.AddIn.GTS/Api.cs


        [DllImport(DLL)]
        public static extern short GT_Open(Card card, short channel = 0, short param = 1);
        [DllImport(DLL)]
        public static extern short GT_Close(Card card);

        [DllImport(DLL)]
        public static extern short GT_LoadConfig(Card card, string pFile);

        [DllImport(DLL)]
        public static extern short GT_AlarmOff(Card card, Axis axis);
        [DllImport(DLL)]
        public static extern short GT_AlarmOn(Card card, Axis axis);
        [DllImport(DLL)]
        public static extern short GT_LmtsOn(Card card, Axis axis, short limitType);
        [DllImport(DLL)]
        public static extern short GT_LmtsOff(Card card, Axis axis, short limitType);
        [DllImport(DLL)]
        public static extern short GT_ProfileScale(Card card, Axis axis, short alpha, short beta);
        [DllImport(DLL)]
        public static extern short GT_EncScale(Card card, Axis axis, short alpha, short beta);
        [DllImport(DLL)]
        public static extern short GT_StepDir(Card card, short step);
        [DllImport(DLL)]
        public static extern short GT_StepPulse(Card card, short step);
        [DllImport(DLL)]
        public static extern short GT_SetMtrBias(Card card, short dac, short bias);
        [DllImport(DLL)]
        public static extern short GT_GetMtrBias(Card card, short dac, out short pBias);
        [DllImport(DLL)]
        public static extern short GT_SetMtrLmt(Card card, short dac, short limit);
        [DllImport(DLL)]
        public static extern short GT_GetMtrLmt(Card card, short dac, out short pLimit);
        [DllImport(DLL)]
        public static extern short GT_EncSns(Card card, ushort sense);
        [DllImport(DLL)]
        public static extern short GT_EncOn(Card card, short encoder);
        [DllImport(DLL)]
        public static extern short GT_EncOff(Card card, short encoder);
        [DllImport(DLL)]
        public static extern short GT_SetPosErr(Card card, short control, int error);
        [DllImport(DLL)]
        public static extern short GT_GetPosErr(Card card, short control, out int pError);
        [DllImport(DLL)]
        public static extern short GT_SetStopDec(Card card, short profile, double decSmoothStop, double decAbruptStop);
        [DllImport(DLL)]
        public static extern short GT_GetStopDec(Card card, short profile, out double pDecSmoothStop, out double pDecAbruptStop);
        [DllImport(DLL)]
        public static extern short GT_LmtSns(Card card, ushort sense);
        [DllImport(DLL)]
        public static extern short GT_CtrlMode(Card card, Axis axis, short mode);
        [DllImport(DLL)]
        public static extern short GT_SetStopIo(Card card, Axis axis, short stopType, short inputType, short inputIndex);
        [DllImport(DLL)]
        public static extern short GT_GpiSns(Card card, ushort sense);
        [DllImport(DLL)]
        public static extern short GT_SetAdcFilter(Card card, short adc, short filterTime);
        [DllImport(DLL)]
        public static extern short GT_SetAxisPrfVelFilter(Card card, Axis axis, short filterNumExp);
        [DllImport(DLL)]
        public static extern short GT_GetAxisPrfVelFilter(Card card, Axis axis, out short pFilterNumExp);
        [DllImport(DLL)]
        public static extern short GT_SetAxisEncVelFilter(Card card, Axis axis, short filterNumExp);
        [DllImport(DLL)]
        public static extern short GT_GetAxisEncVelFilter(Card card, Axis axis, out short pFilterNumExp);
        [DllImport(DLL)]
        public static extern short GT_SetAxisInputShaping(Card card, Axis axis, short enable, short count, double k);

        [DllImport(DLL)]
        public static extern short GT_SetDo(Card card, short doType, int value);
        [DllImport(DLL)]
        public static extern short GT_SetDoBit(Card card, short doType, short doIndex, short value);
        [DllImport(DLL)]
        public static extern short GT_GetDo(Card card, short doType, out int pValue);
        [DllImport(DLL)]
        public static extern short GT_SetDoBitReverse(Card card, short doType, short doIndex, short value, short reverseTime);
        [DllImport(DLL)]
        public static extern short GT_SetDoMask(Card card, short doType, ushort doMask, int value);
        [DllImport(DLL)]
        public static extern short GT_EnableDoBitPulse(Card card, short doType, short doIndex, ushort highLevelTime, ushort lowLevelTime, int pulseNum, short firstLevel);
        [DllImport(DLL)]
        public static extern short GT_DisableDoBitPulse(Card card, short doType, short doIndex);

        [DllImport(DLL)]
        public static extern short GT_GetDi(Card card, short diType, out int pValue);
        [DllImport(DLL)]
        public static extern short GT_GetDiReverseCount(Card card, short diType, short diIndex, out uint reverseCount, short count);
        [DllImport(DLL)]
        public static extern short GT_SetDiReverseCount(Card card, short diType, short diIndex, ref uint reverseCount, short count);
        [DllImport(DLL)]
        public static extern short GT_GetDiRaw(Card card, short diType, out int pValue);

        [DllImport(DLL)]
        public static extern short GT_SetDac(Card card, short dac, ref short value, short count);
        [DllImport(DLL)]
        public static extern short GT_GetDac(Card card, short dac, out short value, short count = 1, IntPtr pClock = default(IntPtr));

        [DllImport(DLL)]
        public static extern short GT_GetAdc(Card card, short adc, out double pValue, short count = 1, IntPtr pClock = default(IntPtr));
        [DllImport(DLL)]
        public static extern short GT_GetAdcValue(Card card, short adc, out short pValue, short count = 1, IntPtr pClock = default(IntPtr));

        [DllImport(DLL)]
        public static extern short GT_SetEncPos(Card card, short encoder, int encPos);
        [DllImport(DLL)]
        public static extern short GT_GetEncPos(Card card, short encoder, out double pValue, short count = 1, IntPtr pClock = default(IntPtr));
        [DllImport(DLL)]
        public static extern short GT_GetEncPosPre(Card card, short encoder, out double pValue, short count, uint pClock);
        [DllImport(DLL)]
        public static extern short GT_GetEncVel(Card card, short encoder, out double pValue, short count = 1, IntPtr pClock = default(IntPtr));

        [DllImport(DLL)]
        public static extern short GT_SetCaptureMode(Card card, Axis encoder, short mode);
        [DllImport(DLL)]
        public static extern short GT_GetCaptureMode(Card card, Axis encoder, out short pMode, short count);
        [DllImport(DLL)]
        public static extern short GT_GetCaptureStatus(Card card, Axis encoder, out short pStatus, out int pValue, short count = 1, IntPtr pClock = default(IntPtr));
        [DllImport(DLL)]
        public static extern short GT_SetCaptureSense(Card card, Axis encoder, short mode, short sense);
        [DllImport(DLL)]
        public static extern short GT_ClearCaptureStatus(Card card, Axis encoder);
        [DllImport(DLL)]
        public static extern short GT_SetCaptureRepeat(Card card, Axis encoder, short count);
        [DllImport(DLL)]
        public static extern short GT_GetCaptureRepeatStatus(Card card, Axis encoder, out short pCount);
        [DllImport(DLL)]
        public static extern short GT_GetCaptureRepeatPos(Card card, Axis encoder, out int pValue, short startNum, short count);
        [DllImport(DLL)]
        public static extern short GT_SetCaptureEncoder(Card card, short trigger, short encoder);
        [DllImport(DLL)]
        public static extern short GT_GetCaptureWidth(Card card, short trigger, out short pWidth, short count);
        [DllImport(DLL)]
        public static extern short GT_GetCaptureHomeGpi(Card card, short trigger, out short pHomeSts, out short pHomePos, out short pGpiSts, out short pGpiPos, short count);

        [DllImport(DLL)]
        public static extern short GT_Reset(Card card);
        [DllImport(DLL)]
        public static extern short GT_GetClock(Card card, out uint pClock, out uint pLoop);
        [DllImport(DLL)]
        public static extern short GT_GetClockHighPrecision(Card card, out uint pClock);

        [DllImport(DLL)]
        public static extern short GT_GetSts(Card card, Axis axis, out int pSts, short count = 1, IntPtr pClock = default(IntPtr));
        [DllImport(DLL)]
        public static extern short GT_ClrSts(Card card, Axis axis, short count);
        [DllImport(DLL)]
        public static extern short GT_AxisOn(Card card, Axis axis);
        [DllImport(DLL)]
        public static extern short GT_AxisOff(Card card, Axis axis);
        [DllImport(DLL)]
        public static extern short GT_Stop(Card card, int mask, int option);
        [DllImport(DLL)]
        public static extern short GT_SetPrfPos(Card card, Axis axis, int prfPos);
        [DllImport(DLL)]
        public static extern short GT_SynchAxisPos(Card card, int mask);
        [DllImport(DLL)]
        public static extern short GT_ZeroPos(Card card, Axis axis, short count);

        [DllImport(DLL)]
        public static extern short GT_SetSoftLimit(Card card, Axis axis, int positive, int negative);
        [DllImport(DLL)]
        public static extern short GT_GetSoftLimit(Card card, Axis axis, out int pPositive, out int pNegative);
        [DllImport(DLL)]
        public static extern short GT_SetAxisBand(Card card, Axis axis, int band, int time);
        [DllImport(DLL)]
        public static extern short GT_GetAxisBand(Card card, Axis axis, out int pBand, out int pTime);
        [DllImport(DLL)]
        public static extern short GT_SetBacklash(Card card, Axis axis, int compValue, double compChangeValue, int compDir);
        [DllImport(DLL)]
        public static extern short GT_GetBacklash(Card card, Axis axis, out int pCompValue, out double pCompChangeValue, out int pCompDir);
        [DllImport(DLL)]
        public static extern short GT_SetLeadScrewComp(Card card, Axis axis, short n, int startPos, int lenPos, out int pCompPos, out int pCompNeg);
        [DllImport(DLL)]
        public static extern short GT_EnableLeadScrewComp(Card card, Axis axis, short mode);
        [DllImport(DLL)]
        public static extern short GT_GetCompensate(Card card, Axis axis, out double pPitchError, out double pCrossError, out double pBacklashError, out double pEncPos, out double pPrfPos);

        [DllImport(DLL)]
        public static extern short GT_EnableGantry(Card card, short gantryMaster, short gantrySlave, double masterKp, double slaveKp);
        [DllImport(DLL)]
        public static extern short GT_DisableGantry(Card card);
        [DllImport(DLL)]
        public static extern short GT_SetGantryErrLmt(Card card, int gantryErrLmt);
        [DllImport(DLL)]
        public static extern short GT_GetGantryErrLmt(Card card, out int pGantryErrLmt);

        [DllImport(DLL)]
        public static extern short GT_GetPrfPos(Card card, short profile, out double pValue, short count = 1, IntPtr pClock = default(IntPtr));
        [DllImport(DLL)]
        public static extern short GT_GetPrfVel(Card card, short profile, out double pValue, short count = 1, IntPtr pClock = default(IntPtr));
        [DllImport(DLL)]
        public static extern short GT_GetPrfAcc(Card card, short profile, out double pValue, short count = 1, IntPtr pClock = default(IntPtr));
        [DllImport(DLL)]
        public static extern short GT_GetPrfMode(Card card, short profile, out int pValue, short count = 1, IntPtr pClock = default(IntPtr));
